--- a/node_server/package.json
+++ b/node_server/package.json
@@ -9,10 +9,13 @@
   "author": "Joshua Rodriguez",
   "license": "ISC",
   "devDependencies": {
+    "btoa": "^1.2.1",
     "cross-env": "^7.0.2",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "request-promise": "^4.2.2"
   },
   "dependencies": {
+    "@okta/jwt-verifier": "^1.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
