--- a/.gitignore
+++ b/.gitignore
@@ -6,16 +6,16 @@ node_server/node_modules/*
 database/*
 README.md
 
-node_modules/**/*
-.expo/*
-npm-debug.*
+./frontend/node_modules/**/*
+./frontend/expo/*
+./frontend/npm-debug.*
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
 *.orig.*
-web-build/
+./frontend/web-build/
 
 # macOS
 .DS_Store
