--- a/node_server/package.json
+++ b/node_server/package.json
@@ -24,5 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "pg-promise": "^10.9.1"
+  },
+  "engines": {
+    "node": "12.18.4"
   }
 }
