--- a/contact-tracing-app/package.json
+++ b/contact-tracing-app/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-web": "^0.13.18",
-    "expo-secure-store": "~9.3.0"
+    "expo-secure-store": "~9.3.0",
+    "react-native-maps": "0.27.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6"
