--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ database/*
 contact-tracing-app/.expo
 contact-tracing-app/.expo-shared
 contact-tracing-app/node_modules
+contact-tracing-app/npm-debug.*
+
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+contact-tracing-app/web-build/
+*.code-workspace
+# macOS
+.DS_Store
