Self Evaluation v1, React Maps imported
Self Eval screens created; start screen, quiz screen, results, screen.

Hotspot map started, react maps has been imported and now the project only works on emulator.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ contact-tracing-app/assets/images/login_img2.png
 contact-tracing-app/assets/images/login_img2.jpg
 contact-tracing-app/assets/images/login_img5.jpg
 contact-tracing-app/assets/images/login_background.jpg
+contact-tracing-app/screens/testScreen copy.js
