--- a/contact-tracing-app/android/build.gradle
+++ b/contact-tracing-app/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
             minSdkVersion = 21
             compileSdkVersion = 29
             targetSdkVersion = 29
+            supportLibVersion = "27.1.0"
             playServicesVersion = "17.0.0"
             androidMapsUtilsVersion = "2.2.2"
     }
