--- a/contact-tracing-app/android/app/src/main/AndroidManifest.xml
+++ b/contact-tracing-app/android/app/src/main/AndroidManifest.xml
@@ -22,9 +22,6 @@
   <uses-permission android:name="android.permission.WAKE_LOCK"/>
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
   <application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:allowBackup="true" android:theme="@style/AppTheme">
-    <meta-data 
-      android:name="com.google.android.geo.API_KEY"
-      android:value="AIzaSyBVtSaDm9goHMgN4a_HdImVKy3QXE-2n4s"/>
     <meta-data android:name="expo.modules.updates.EXPO_SDK_VERSION" android:value="40.0.0"/>
     <meta-data android:name="expo.modules.updates.ENABLED" android:value="true"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_CHECK_ON_LAUNCH" android:value="ALWAYS"/>
@@ -43,5 +40,8 @@
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
+  <meta-data 
+      android:name="com.google.android.geo.API_KEY"
+      android:value="API KEY HERE"/>
   </application>
 </manifest>
