--- a/contact-tracing-app/android/build.gradle
+++ b/contact-tracing-app/android/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
-        supportLibVersion = "27.1.0"
+        supportLibVersion = "28.0.0"
         playServicesVersion = "17.0.0"
-        androidMapsUtilsVersion = "2.2.2"
+        androidMapsUtilsVersion = "+0.5"
     }
     repositories {
         google()
