--- a/contact-tracing-app/package.json
+++ b/contact-tracing-app/package.json
@@ -24,6 +24,7 @@
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.2",
     "react-native-radio-buttons": "1.0.0",
