Added BLE functionality

--- a/contact-tracing-app/android/app/build.gradle
+++ b/contact-tracing-app/android/app/build.gradle
@@ -215,6 +215,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:17.2.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-maps:+'
+    implementation 'com.mohsenoid.close-to-me:close-to-me:1.0.3'
+    implementation 'androidx.core:core-ktx:+'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     /*
     implementation(project(':react-native-maps')){
         exclude group: 'com.google.android.gms', module: 'play-services-base'
