--- a/contact-tracing-app/android/app/src/main/AndroidManifest.xml
+++ b/contact-tracing-app/android/app/src/main/AndroidManifest.xml
@@ -43,12 +43,9 @@
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
-<<<<<<< HEAD
     <service android:name="pathogen.contacttracing.BLEService"/>
-=======
   <meta-data 
       android:name="com.google.android.geo.API_KEY"
-      android:value="API KEY HERE"/>
->>>>>>> 397066ff132601d4eca41675b652b27b0ad825c9
+      android:value="AIzaSyANiBTR_BcwT_bdHVpSr8qccN7HhfIfPvs"/>
   </application>
 </manifest>
