--- a/contact-tracing-app/android/build.gradle
+++ b/contact-tracing-app/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         supportLibVersion = "28.0.0"
         playServicesVersion = "17.0.0"
         androidMapsUtilsVersion = "+0.5"
+        kotlin_version = '1.4.30'
     }
     repositories {
         google()
