--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,12 @@
 .expo
 __generated__
 web-build
-# Ignoring these files
-
 .DS_Store
 
-
-
-.DS_Store
-.expo
-__generated__
-web-build
-
-
+# Backend file ignores
+node_server/firebase/serviceAccount.json
 node_server/.env
-node_server/client.js
 node_modules/
-database/*
 README.md
 
 
@@ -33,6 +23,7 @@ contact-tracing-app/web-build/
 
 
 #contact-tracing-app 
+.expo
 contact-tracing-app/.expo/web/cache/development/babel-loader/001402d6b324f16690d2210416e26082.json
 contact-tracing-app/.expo/web/cache/development/babel-loader/006f935b5cb38d81724a656ab4c21dab.json
 .json
@@ -46,15 +37,16 @@ contact-tracing-app/assets/images/login_img5.jpg
 contact-tracing-app/assets/images/login_background.jpg
 contact-tracing-app/screens/testScreen copy.js
 
+
+#Build ignores
 build/
 .idea
-
-
 .gradle
 local.properties
 *.iml
-
 /buck-out/
 .buckd/
 *.keystore
 !debug.keystore
+contact-tracing-app/android/app/google-services.json
+
