--- a/contact-tracing-app/android/build.gradle
+++ b/contact-tracing-app/android/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext {  
+        googlePlayServicesVersion = "17.0.0"
         buildToolsVersion = "29.0.2"
         minSdkVersion = 21
         compileSdkVersion = 29
