--- a/contact-tracing-app/android/settings.gradle
+++ b/contact-tracing-app/android/settings.gradle
@@ -12,3 +12,8 @@ include ':app'
 include ':react-native-maps'
 
 project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/lib/android')
+
+include ':@darron1217_react-native-background-geolocation-common'
+project(':@darron1217_react-native-background-geolocation-common').projectDir = new File(rootProject.projectDir, '../node_modules/@darron1217/react-native-background-geolocation/android/common')
+include ':@darron1217_react-native-background-geolocation'
+project(':@darron1217_react-native-background-geolocation').projectDir = new File(rootProject.projectDir, '../node_modules/@darron1217/react-native-background-geolocation/android/lib')
