--- a/contact-tracing-app/package.json
+++ b/contact-tracing-app/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@darron1217/react-native-background-geolocation": "^0.6.6",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.10",
